kubernetes/base/istio/istio-authentication.yml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: padel-jwt-auth
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway 
  jwtRules:
  - issuer: "padel-system"
    forwardOriginalToken: true
    fromHeaders:
    - name: Authorization
      prefix: "Bearer"

    jwks: |
      { "keys": [ {
          "kty": "oct",
          "kid": "padel-key",
          "alg": "HS256",
          "k": "UzY3NTY2QjU5NzAzMzczMzY3NjM5NzkyRjQyM0Y0NTI4NDgyQjRENjI1MTY1NTQ2ODU3NkQ1QTcxMzQ3NDM3"
        } ] }
