kubernetes/base/istio/istio-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: padel-api-route
spec:
  hosts:
  - "*"
  gateways:
  - padel-gateway
  http:
  - match:
    - uri:
        prefix: /auth
    - uri:
        prefix: /user
    route:
    - destination:
        host: user-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /club-composite
    route:
    - destination:
        host: club-composite-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /club
    route:
    - destination:
        host: club-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /reservation
    route:
    - destination:
        host: reservation-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /review
    route:
    - destination:
        host: review-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /notification
    route:
    - destination:
        host: notification-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /v3/api-docs
    route:
    - destination:
        host: user-service
        port:
          number: 80
