kubernetes/base/istio/istio-authorization.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: padel-authz-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - to:
    - operation:
        paths: ["/auth/*", "/actuator/*", "*/v3/api-docs", "/swagger-ui/*", "/club-composite/*"]
    - operation:
        methods: ["GET"]
        paths: ["/club*", "/review*"] 
  - from:
    - source:
        requestPrincipals: ["*"] 
    when:
    - key: request.auth.claims[role]
      values: ["USER", "ADMIN"]
    to:
    - operation:
        paths: ["/reservation*"]
    - operation:
        methods: ["POST"]
        paths: ["/review*"]

  - from:
    - source:
        requestPrincipals: ["*"]
    when:
    - key: request.auth.claims[role]
      values: ["USER"]
    to:
    - operation:
        methods: ["GET", "PUT"]
        paths: ["/user*"]

  - from:
    - source:
        requestPrincipals: ["*"]
    when:
    - key: request.auth.claims[role]
      values: ["ADMIN"]
    to:
    - operation:
        methods: ["POST", "PUT", "DELETE"]
        paths: ["/club*"]
    - operation:
        methods: ["DELETE"]
        paths: ["/review*"]
    - operation:
        paths: ["/notification*"]
    - operation:
        paths: ["/user*"]

  - from:
    - source:
        requestPrincipals: ["*"]
    when:
    - key: request.auth.claims[role]
      values: ["OWNER"]
    to:
    - operation:
        paths: ["/user*"]
